# Agent-Memory-Exchange

./: .env.example  .gitattributes  .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
amx/: __init__.py  adoption.py  cli.py  clients.py  config.py  schema.py
amx/identity/: __init__.py  project_id.py  reconcile.py
amx/integrations/: foundry_iq.py
amx/mcp/: server.py  tools.py
amx/memory/: bundle.py  digest.py  discovery.py  ingest.py  ranking.py  retrieval.py  summary.py
amx/state/: decision_log.py  project_state.py
amx/store/: __init__.py  migrations.py  sqlite.py
amx/utils/: text.py  token_budget.py
docs/: DEV.md  WORKING.md  llm_guide.md
scripts/: install.ps1  install.sh
tests/: burn_test.py  conftest.py  smoke.py  stress_test.py  test_adoption.py  test_bundle.py  test_capture.py  test_cli.py  test_clients.py  test_destructive.py  test_discovery.py  test_foundry_iq.py  test_identity.py  test_ingest.py  test_lifecycle.py  test_mcp_roundtrip.py  test_profile.py  test_ranking.py  test_reconcile.py  test_retrieval.py  test_robustness.py  test_sessions.py  test_state.py  verify_foundry.py
